Parser Grammar
Program → Start StatementList EOF


StatementList → Statement StatementList
              | ε


Statement → LetStmt
          | AssignStmt
          | InputStmt
          | PrintStmt
          | SwapStmt
          | WhileStmt
          | ContinueStmt
          | BreakStmt
          | Block
          | IfStmt


Block → LBrac StatementList RBrac


LetStmt → Let Identifier Assign Expression Semicolon


AssignStmt → Identifier Assign Expression Semicolon


InputStmt → Input Identifier Semicolon
          | Input Lp Identifier Rp Semicolon


PrintStmt → Print Expression Semicolon
          | Print Lp Expression Rp Semicolon


SwapStmt → Swap Identifier Identifier Semicolon


WhileStmt → While Lp Expression Rp Block


ContinueStmt → Continue Semicolon


BreakStmt → Break Semicolon


IfStmt → If Lp Expression Rp Block ElseIfList ElsePart


ElseIfList → Elseif Lp Expression Rp Block ElseIfList
           | ε


ElsePart → Else Block
         | ε


Expression → Equality


Equality → Comparison EqualityTail


EqualityTail → Equals Comparison EqualityTail
             | NotEquals Comparison EqualityTail
             | ε


Comparison → RangeExpr ComparisonTail


ComparisonTail → Less RangeExpr ComparisonTail
               | LE RangeExpr ComparisonTail
               | Greater RangeExpr ComparisonTail
               | GE RangeExpr ComparisonTail
               | ε


RangeExpr → Term RangeTail


RangeTail → Dots Term
          | ε


Term → Factor TermTail


TermTail → Add Factor TermTail
         | Minus Factor TermTail
         | ε


Factor → Primary FactorTail


FactorTail → Multiply Primary FactorTail
           | Divide Primary FactorTail
           | Mod Primary FactorTail
           | ε


Primary → Identifier
        | Constant
        | Lp Expression Rp
